add html, add files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,61 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Website</title>
+    <title>Business School</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="logo">Business School</div>
+      <div class="toggle"></div>
+      <div class="navigation">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="work.html"></a>Work</li>
+          <li><a href="contact.html"></a>Contact</li>
+        </ul>
+        <div class="social-bar">
+          <ul>
+            <li>
+              <a href="#"
+                ><img src="images/facebook.png" target="_blank" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/twitter.png" target="_blank" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/instagram.png" target="_blank" alt="facebook"
+              /></a>
+            </li>
+          </ul>
+          <a href="mailto:email@example.com" class="email-icon"
+            ><img src="images/email.png" alt="email"
+          /></a>
+        </div>
+      </div>
+    </header>
+    <section>
+      <img src="images/home-img.jpg" class="home-img" alt="" />
+      <div class="home-content">
+        <h1>
+          We help to achieve <br />
+          your goals
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+          quasi repellendus nihil voluptates fugiat consequuntur vero odio nobis
+          veritatis, sint repudiandae eligendi, rem, culpa laborum? Sit, esse
+          eaque. Assumenda ut perspiciatis sunt sint fugiat pariatur aperiam
+          ducimus eius accusantium explicabo?
+        </p>
+        <a href="contact.html" class="btn">Get Started</a>
+      </div>
+    </section>
+    <script src="js/script.js"></script>
+  </body>
 </html>
