--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <body>
     <header>
       <div class="logo">Business School</div>
-      <div class="toggle active"></div>
+      <div class="toggle"></div>
       <div class="navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="work.html"></a>Work</li>
-          <li><a href="contact.html"></a>Contact</li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="social-bar">
           <ul>
@@ -50,11 +50,10 @@
           your goals
         </h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-          quasi repellendus nihil voluptates fugiat consequuntur vero odio nobis
-          veritatis, sint repudiandae eligendi, rem, culpa laborum? Sit, esse
-          eaque. Assumenda ut perspiciatis sunt sint fugiat pariatur aperiam
-          ducimus eius accusantium explicabo?
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti ab
+          debitis quam rem, fuga voluptatem facere sunt doloremque perferendis
+          sequi, dignissimos placeat assumenda quis, numquam provident nobis.
+          Sapiente impedit et repudiandae, ullam sequi non perferendis.
         </p>
         <a href="contact.html" class="btn">Get Started</a>
       </div>
