finalize services page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business School</title>
+    <title>WebDev School</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
-      <div class="logo">Business School</div>
+      <div class="logo">WebDev School</div>
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
@@ -42,7 +42,7 @@
         </div>
       </div>
     </header>
-    <section>
+    <section class="home">
       <img src="images/home-img.jpg" class="home-img" alt="" />
       <div class="home-content">
         <h1>
