--- a/work.html
+++ b/work.html
@@ -42,19 +42,110 @@
         </div>
       </div>
     </header>
+
     <section>
       <div class="title">
-        <h1>Services that you will learn</h1>
+        <h1>Students' Projects</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. A debitis
-          dolorem perspiciatis sequi adipisci accusantium. Hic, unde itaque?
-          Culpa ipsa aspernatur nobis recusandae? Facilis, doloribus corporis
-          veniam reiciendis maxime enim itaque saepe id, animi modi illo
-          repellat expedita pariatur eum earum cum perspiciatis consequuntur,
-          tempore iure nam asperiores at omnis!
+         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum vero obcaecati illo veritatis vel? Impedit error, hic ut adipisci consequatur cum quaerat nulla minima odit facere, ipsam fuga pariatur harum officiis iusto. Provident vel ipsa et voluptatem sed recusandae in similique? Alias inventore enim incidunt nostrum pariatur magni neque! Omnis, dolorum facere delectus velit eligendi dicta error perferendis voluptas. Quaerat alias, ducimus laudantium dolor iusto aperiam commodi, illo unde consectetur vitae laboriosam possimus fuga perferendis perspiciatis quibusdam debitis officia voluptatibus maiores doloremque. Minima totam quisquam laudantium voluptatum eligendi, saepe quo, laborum pariatur eos neque atque, recusandae officiis nisi consequatur eaque.
         </p>
       </div>
+
+      <div class="portfolio">
+        <div class="item">
+          <img src="images/gallery/1.jpg" alt="" />
+          <div class="action">
+            <a href="#">Launch</a>
+          </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/2.jpeg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/3.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/4.jpeg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/5.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/6.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/7.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/8.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/9.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/10.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/11.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/12.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/13.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/14.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/gallery/15.jpg" alt="" />
+            <div class="action">
+              <a href="#">Launch</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
     <script src="js/script.js"></script>
   </body>
 </html>
