add contact page

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <div class="social-bar">
           <ul>
             <li>
-              <a href="#"
-                ><img src="images/facebook.png" target="_blank" alt="facebook"
+              <a href="https://github.com/hulchenko" target="_blank"
+                ><img src="images/facebook.png" alt="facebook"
               /></a>
             </li>
             <li>
-              <a href="#"
-                ><img src="images/twitter.png" target="_blank" alt="facebook"
+              <a href="https://github.com/hulchenko" target="_blank"
+                ><img src="images/twitter.png" alt="facebook"
               /></a>
             </li>
             <li>
-              <a href="#"
-                ><img src="images/instagram.png" target="_blank" alt="facebook"
+              <a href="https://github.com/hulchenko" target="_blank"
+                ><img src="images/instagram.png" alt="facebook"
               /></a>
             </li>
           </ul>
