--- a/services.html
+++ b/services.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <div class="logo">WebDev School</div>
+      <a href="index.html"
+        ><div class="logo" style="color: #111 !important">WebDev School</div></a
+      >
       <div class="toggle"></div>
       <div class="navigation">
         <ul>
