use regular css, sass media query bugs

--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
 
     <section>
       <div class="title">
-        <h1>Students' Projects</h1>
+        <h1>Our Students' Projects</h1>
         <p>
          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum vero obcaecati illo veritatis vel? Impedit error, hic ut adipisci consequatur cum quaerat nulla minima odit facere, ipsam fuga pariatur harum officiis iusto. Provident vel ipsa et voluptatem sed recusandae in similique? Alias inventore enim incidunt nostrum pariatur magni neque! Omnis, dolorum facere delectus velit eligendi dicta error perferendis voluptas. Quaerat alias, ducimus laudantium dolor iusto aperiam commodi, illo unde consectetur vitae laboriosam possimus fuga perferendis perspiciatis quibusdam debitis officia voluptatibus maiores doloremque. Minima totam quisquam laudantium voluptatum eligendi, saepe quo, laborum pariatur eos neque atque, recusandae officiis nisi consequatur eaque.
         </p>
